--- a/style.css
+++ b/style.css
@@ -189,3 +189,71 @@ header {
   font-size: 20px;
   color: #00000052;
 }
+
+
+.comment-section{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    gap: 20px;
+    max-width: 1140px;
+    margin: 50px auto 0px auto;
+    border: #00000052 solid 1px;
+}
+
+.comment-heading {
+    text-align: center;
+    margin-top: 110px;
+    font-size: 42px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+}
+
+.comment-container{
+    display: flex; 
+    justify-content: space-between;
+    align-items: start;
+    gap: 20px;
+    text-align: start;
+}
+
+.comment-box {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 350px;
+}
+
+.comment-name{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.comment {
+    display: flex;
+    flex-direction: column;
+}
+
+.comment-subtext {
+    font-size: 15px;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+    color: #1E1E1E;
+}
+
+.comment-subHeading {
+    font-size: 18px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    color: #31313a;
+}
+
+.comment{
+    color: #757575;
+}
+
+.date{
+    color:#B3B3B3
+}
