--- a/style.css
+++ b/style.css
@@ -257,3 +257,76 @@ header {
 .date{
     color:#B3B3B3
 }
+
+.from-box{
+    font-size: 97px;
+}
+
+.form-section{
+    display: flex;
+    gap: 20px;
+    max-width: 1140px;
+    min-height: 632px;
+    margin: 50px auto 0px auto;
+}
+
+.form-heading{
+    display: flex;
+    align-items: center;
+    font-size: 97px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+}
+
+
+
+.from-button{
+    min-height: 48px;
+  cursor: pointer;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  font-family: "Inter", sans-serif;;
+  width: 100%;
+}
+
+.form-container{
+    margin-top: 250px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 517px;
+    min-height: 632px;
+
+}
+
+label{
+    display: block;
+    font-size: 12px;
+    padding: 0% 0px 10px 0px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+}
+
+input {
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    border: none;
+    /* padding: 0px 20px; */
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+    border: 1px solid #00000052;
+    }
+
+    textarea {
+    width: 100%;
+    border-radius: 8px;
+    border: none;
+    border: 1px solid #00000052;
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+
+}
