--- a/style.css
+++ b/style.css
@@ -291,12 +291,12 @@ header {
 }
 
 .form-container{
-    margin-top: 250px;
+    margin-top: 150px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     max-width: 517px;
-    min-height: 632px;
+    max-height: 632px;
 
 }
 
@@ -329,4 +329,53 @@ input {
     font-family: "Inter", sans-serif;
     font-weight: 300;
 
+}
+
+
+/* footer section */
+.footer-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 50px auto 0px auto;
+  min-height: 428px;
+}
+.footer {
+  display: flex;
+    flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  /* height: 221px; */
+  max-width: 531px;
+  gap: 20px;
+  /* background-color: #7873ff; */
+}
+
+.footer-text {
+    text-align: center;
+  font-size: 16px;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  color: #8987A1;
+}
+
+.footer-logo {
+  font-size: 100px;
+  font-family: "Inter", sans-serif;
+  font-weight: 800;
+  color: #4E47FF;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.footer-links {
+    width: 50%;
+  font-size: 11px;
+  display:flex;
+  justify-content:space-between;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  text-decoration: none;
+    color: #8987A1;
 }
